add first unit test, add Tsunami property to Quake

--- a/Earthquakes.xcodeproj/xcshareddata/xcschemes/Earthquakes.xcscheme
+++ b/Earthquakes.xcodeproj/xcshareddata/xcschemes/Earthquakes.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "45067ADA2BD3D21700B85540"
+               BuildableName = "EarthquakesTests.xctest"
+               BlueprintName = "EarthquakesTests"
+               ReferencedContainer = "container:Earthquakes.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
